Changes in order creation, payment methods configuration, background images etc
Changes in order creation, payment methods configuration, background images etc

--- a/app/src/main/res/layout/activity_add_ons.xml
+++ b/app/src/main/res/layout/activity_add_ons.xml
@@ -17,7 +17,7 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/imageViewBackground"
+                android:id="@+id/imageViewBackgroundAddOns"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:alpha="0.3"
@@ -28,8 +28,7 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="1.0"
-                app:srcCompat="@drawable/background" />
+                app:layout_constraintVertical_bias="1.0" />
 
 
             <!-- ****************************************************************************************************** -->
