--- a/app/src/main/res/layout/activity_choose_business.xml
+++ b/app/src/main/res/layout/activity_choose_business.xml
@@ -6,6 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".ChooseBusiness">
 
+    <ImageView
+        android:id="@+id/imageViewBackground"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:alpha="0.7"
+        android:contentDescription="@string/imageView"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/backgroundflexyuser"/>
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
