Credit Card method activity

--- a/app/src/main/res/layout/activity_order_placed.xml
+++ b/app/src/main/res/layout/activity_order_placed.xml
@@ -7,7 +7,7 @@
     tools:context=".OrderPlaced">
 
     <ImageView
-        android:id="@+id/imageViewBackground"
+        android:id="@+id/imageViewBackgroundOrderPlaced"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:alpha="0.3"
@@ -18,8 +18,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/background" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/buttonGoHome"
