--- a/app/src/main/res/layout/activity_add_address.xml
+++ b/app/src/main/res/layout/activity_add_address.xml
@@ -25,6 +25,7 @@
         android:id="@+id/buttonAddAddress"
         android:layout_width="0dp"
         android:layout_height="50dp"
+        android:fontFamily="@font/montserrat"
         android:text="@string/addAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,11 +59,10 @@
         android:layout_width="0dp"
         android:layout_height="46dp"
         android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
         android:ems="10"
+        android:fontFamily="sans-serif-light"
         android:hint="@string/addressTItle"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="@+id/view5"
@@ -74,11 +74,10 @@
         android:layout_width="0dp"
         android:layout_height="46dp"
         android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
         android:layout_marginTop="66dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
         android:ems="10"
+        android:fontFamily="sans-serif-light"
         android:hint="@string/aptNo"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="@+id/view5"
@@ -90,11 +89,10 @@
         android:layout_width="0dp"
         android:layout_height="46dp"
         android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
         android:layout_marginTop="116dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
         android:ems="10"
+        android:fontFamily="sans-serif-light"
         android:hint="@string/city"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="@+id/view5"
@@ -106,11 +104,10 @@
         android:layout_width="0dp"
         android:layout_height="46dp"
         android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
         android:layout_marginTop="166dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
         android:ems="10"
+        android:fontFamily="sans-serif-light"
         android:hint="@string/province"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="@+id/view5"
@@ -122,11 +119,10 @@
         android:layout_width="0dp"
         android:layout_height="46dp"
         android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
         android:layout_marginTop="216dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
         android:ems="10"
+        android:fontFamily="sans-serif-light"
         android:hint="@string/postal"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="@+id/view5"
