--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -31,6 +31,25 @@
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/backgroundflexyuser" />
 
+    <TextView
+        android:id="@+id/txtflexyName"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="176dp"
+        android:background="#57000000"
+        android:fadingEdge="horizontal|vertical"
+        android:fadingEdgeLength="15dp"
+        android:fontFamily="@font/montserrat_bold"
+        android:gravity="center"
+        android:text="@string/flexyName"
+        android:textColor="#FFFFFF"
+        android:textColorHighlight="#616161"
+        android:textSize="60sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_button"
         android:layout_width="0dp"
