--- a/app/src/main/res/layout/activity_payment_methods.xml
+++ b/app/src/main/res/layout/activity_payment_methods.xml
@@ -35,6 +35,7 @@
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:background="@color/colorPrimaryDark"
+                android:fontFamily="@font/montserrat"
                 android:gravity="center"
                 android:text="@string/payment"
                 android:textColor="@color/common_google_signin_btn_text_dark_default"
@@ -62,11 +63,11 @@
                 android:id="@+id/textViewOrderSummary"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
+                android:fontFamily="@font/montserrat"
                 android:gravity="center"
                 android:overScrollMode="always"
                 android:scrollbars="vertical"
+                android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="@+id/viewOrderSummary"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -81,7 +82,7 @@
             <View
                 android:id="@+id/viewPayment"
                 android:layout_width="match_parent"
-                android:layout_height="130dp"
+                android:layout_height="wrap_content"
                 android:background="#B3FFFFFF"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -92,10 +93,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:layout_marginLeft="24dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="24dp"
-                android:layout_marginRight="24dp"
+                android:fontFamily="@font/montserrat"
                 android:text="@string/continueWithPaypal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -106,10 +106,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:layout_marginLeft="24dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="24dp"
-                android:layout_marginRight="24dp"
+                android:fontFamily="@font/montserrat"
                 android:text="@string/cod"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -120,10 +119,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:layout_marginLeft="24dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="24dp"
-                android:layout_marginRight="24dp"
+                android:fontFamily="@font/montserrat"
                 android:text="@string/creditCardPayment"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -134,10 +132,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:layout_marginLeft="24dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="24dp"
-                android:layout_marginRight="24dp"
+                android:fontFamily="@font/montserrat"
                 android:text="@string/bitCoinPayment"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
