--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -26,6 +26,7 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:background="@color/colorPrimaryDark"
+        android:fontFamily="@font/montserrat"
         android:gravity="center"
         android:text="@string/signUp"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
@@ -40,11 +41,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
         android:ems="10"
+        android:fontFamily="sans-serif-light"
         android:gravity="center"
         android:hint="@string/name"
         android:inputType="textPersonName"
@@ -57,11 +57,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
         android:ems="10"
+        android:fontFamily="sans-serif-light"
         android:gravity="center"
         android:hint="@string/email"
         android:inputType="textPersonName"
@@ -74,11 +73,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
         android:ems="10"
+        android:fontFamily="sans-serif-light"
         android:gravity="center"
         android:hint="@string/password"
         android:inputType="textPassword"
@@ -91,10 +89,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
+        android:fontFamily="@font/montserrat"
         android:text="@string/signUp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -106,11 +103,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
         android:ems="10"
+        android:fontFamily="sans-serif-light"
         android:gravity="center"
         android:hint="@string/confirmPassword"
         android:inputType="textPassword"
