Fixed Custom checkout message in OrderPlaced OrderId now showing in OrderPlaced Custom Background image fixed in History

--- a/app/src/main/res/layout/activity_add_ons.xml
+++ b/app/src/main/res/layout/activity_add_ons.xml
@@ -260,6 +260,7 @@
                 android:layout_width="200dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="5dp"
+                android:layout_marginTop="24dp"
                 android:fontFamily="@font/montserrat"
                 android:text="@string/otherItem"
                 app:layout_constraintStart_toStartOf="parent"
@@ -270,6 +271,7 @@
                 android:layout_width="200dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="5dp"
+                android:layout_marginTop="24dp"
                 android:fontFamily="@font/montserrat"
                 android:text="@string/proceedToPay"
                 app:layout_constraintStart_toEndOf="@+id/buttonAddOtherItem"
