--- a/app/src/main/res/layout/activity_choose_business.xml
+++ b/app/src/main/res/layout/activity_choose_business.xml
@@ -41,8 +41,10 @@
         android:id="@+id/spinnerListBusiness"
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="50dp"
+        android:background="@color/white"
         android:dropDownWidth="match_parent"
+        android:dropDownSelector="@drawable/ic_keyboard_arrow_down_black_24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -51,7 +53,7 @@
         android:id="@+id/buttonProceed"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="80dp"
         android:fontFamily="@font/montserrat"
         android:text="Proceed"
         app:layout_constraintEnd_toEndOf="parent"
