--- a/app/src/main/res/layout/activity_order_placed.xml
+++ b/app/src/main/res/layout/activity_order_placed.xml
@@ -52,6 +52,7 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:background="@color/colorPrimaryDark"
+        android:fontFamily="@font/montserrat"
         android:gravity="center"
         android:text="@string/orderPlaced"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
@@ -99,4 +100,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <TextView
+        android:id="@+id/txtViewCheckoutMsg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat"
+        android:gravity="center"
+        android:text="@string/thankyou"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@id/buttonCall"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewOrderID" />
 </androidx.constraintlayout.widget.ConstraintLayout>
