--- a/app/src/main/res/layout/adapter_history.xml
+++ b/app/src/main/res/layout/adapter_history.xml
@@ -3,10 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#33FFFFFF">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="5dp"
+    android:background="#33FFFFFF"
+    android:backgroundTint="#CCCCCC">
 
-<!--
+    <!--
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
@@ -53,7 +55,7 @@
         app:layout_constraintStart_toEndOf="@+id/textViewOrderID"
         app:layout_constraintTop_toTopOf="parent" />
 
-<!--
+    <!--
             <TextView
                 android:id="@+id/textViewPrice"
                 android:layout_width="wrap_content"
@@ -77,7 +79,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 />
     -->
-<!--
+    <!--
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/completeHistory"
                 android:layout_width="match_parent"
@@ -87,7 +89,7 @@
                 app:layout_constraintEnd_toEndOf="parent">
 -->
 
-<!--
+    <!--
                 <Button
                     android:id="@+id/arrowBtn"
                     android:layout_width="35dp"
@@ -113,9 +115,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewDate" />
 
-            <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
+    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
 
-<!--
+    <!--
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 -->
