--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,7 +10,7 @@
         android:id="@+id/imageViewBackgroundHome"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:alpha="0.3"
+        android:alpha="0.2"
         android:contentDescription="@string/imageView"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,22 +23,27 @@
     <TextView
         android:id="@+id/textViewWelcomeMsg"
         android:layout_width="300dp"
-        android:layout_height="250dp"
+        android:layout_height="300dp"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/montserrat_bold"
         android:gravity="center"
+        android:isScrollContainer="true"
+        android:scrollbarAlwaysDrawHorizontalTrack="false"
+        android:scrollbarAlwaysDrawVerticalTrack="false"
+        android:scrollHorizontally="false"
         android:text="TextView"
         android:textSize="18sp"
+        android:verticalScrollbarPosition="defaultPosition"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageViewBackground3" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonAboutUs"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="24dp"
         android:fontFamily="@font/montserrat"
         android:text="About Us"
         app:layout_constraintEnd_toEndOf="parent"
