--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -10,7 +10,7 @@
         android:id="@+id/imageViewBackgroundAboutUs"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:alpha="0.3"
+        android:alpha="0.2"
         android:contentDescription="@string/imageView"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -24,9 +24,11 @@
         android:id="@+id/textViewAboutMsg"
         android:layout_width="300dp"
         android:layout_height="450dp"
-        android:fontFamily="@font/montserrat"
+        android:fontFamily="@font/montserrat_bold"
         android:gravity="center"
+        android:includeFontPadding="true"
         android:text="TextView"
+        android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
